--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   "autoload": {
     "classmap": [
       "app/commands", "app/controllers", "app/models", "app/database/migrations", "app/database/seeds",
-      "app/tests/TestCase.php"
+      "app/tests/TestCase.php",
+        "app/facades"
     ]
   },
   "scripts": {
