--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "classmap": [
       "app/commands", "app/controllers", "app/models", "app/database/migrations", "app/database/seeds",
       "app/tests/TestCase.php",
-        "app/facades"
+        "app/facades",
+        "app/facades/osuHelperServiceProvider.php"
     ]
   },
   "scripts": {
